--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<main id="main-block">
 			<section class="about group">	
 				<div class="my-photo">
-					<img src="images/photo.jpg" alt="me">
+					<img src="img/photo.jpg" alt="me">
 				</div>
 				<div class="hello-about">
 					<h2>About Me</h2>
@@ -40,7 +40,7 @@
 				<h2>How I can help</h2>
 				<section class="design group">
 					<div class="design-img">
-						<img src="images/web-design.png" alt="design">
+						<img src="img/web-design.png" alt="design">
 					</div>
 					<div class="design-text">
 						<h3>Design your website.</h3>
@@ -49,7 +49,7 @@
 				</section><!-- design section -->
 				<section class="develop group">
 					<div class="develop-img">
-						<img src="images/web-dev.png" alt="development">
+						<img src="img/web-dev.png" alt="development">
 					</div>
 					<div class="develop-text">
 						<h3>Develop what you need.</h3>
