--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
+	<meta  http-equiv="Content-Type" content="text/html"; charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Kliuchyk</title>
-	<link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lora:700,400,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -35,7 +36,6 @@
 					<p>I'm 26 years old future web developer based in Dnipro, Ukraine. Currently I study web technologies at SoftServ IT Academy to become a front-end developer and web-designer. I have a great passion for web design and development. So I belive very soon I will be able to create good-looking high quality websites.</p>
 				</div>
 			</section> <!-- about -->
-			<div class="breaker"></div>
 			<section class="i-can">
 				<h2>How I can help</h2>
 				<section class="design group">
@@ -57,25 +57,33 @@
 					</div>
 				</section><!-- develop section -->
 			</section> <!-- i-can -->
-			<div class="breaker"></div>
 			<section class="contact">
 				<div class="contact-description">
 					<h2>Thank you for visiting my website!</h2>
 					<p>I’m open to new interesting projects so feel free to contact me.</p>
 					<p>You are very welcom to ask any question or just to say hello!</p>
+					<form action="#" method="POST" class="feedback">
+						<label for="email1" class="hidden-label">Email</label>
+						<input id="email1" type="email" placeholder="your@email.com">
+
+						<label for="name1" class="hidden-label">Name</label>
+						<input id="name1" type="text" placeholder="your name">
+
+						<button class="mm-btn">MESSAGE ME</button>
+					</form>
 				</div>
 			</section> <!-- contact -->
 		</main>
 		<footer id="bottom-block">
-				<p>2016 Evgeny Kliuchyk</p>
-				<nav class="social-links">
-					<ul class="group">
-					<li><a href="#">facebook</a></li>
-					<li><a href="#">linkedIn</a></li>
-					<li><a href="#">GitHub</a></li>
-				</ul>
-				</nav>
+				<p>&copy; 2016 Evgeny Kliuchyk</p>
+				<div class="social-links">
+					<a href="https://www.facebook.com/eugene.kliuchyk" class="f"><!-- Facebook --></a>
+					<a href="https://www.linkedin.com/in/evgeny-kliuchyk-1a9315102?trk=nav_responsive_tab_profile" class="in"><!-- LinkedIn --></a>
+					<a href="https://github.com/kliuchyk/main-draft-2" class="git"><!-- GitHub --></a>
+				</div>
 		</footer>
 	</div> <!-- wrapper -->
+	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+	<script type="text/javascript" src="../js/main.js"></script>
 </body>
 </html>
