--- a/index.html
+++ b/index.html
@@ -63,14 +63,18 @@
 					<p>I’m open to new interesting projects so feel free to contact me.</p>
 					<p>You are very welcom to ask any question or just to say hello!</p>
 					<form action="#" method="POST" class="feedback">
-						<label for="email1" class="hidden-label">Email</label>
-						<input id="email1" type="email" placeholder="your@email.com">
+						<label for="email" class="hidden-label">Email</label>
+						<input id="email" type="email" placeholder="your@email.com">
 
-						<label for="name1" class="hidden-label">Name</label>
-						<input id="name1" type="text" placeholder="your name">
+						<label for="name" class="hidden-label">Name</label>
+						<input id="name" type="text" placeholder="your name">
+						
+						<label for="msg" class="hidden-label">Message</label>
+						<input id="msg" type="text" placeholder="place for your message...">
 
-						<button class="mm-btn">MESSAGE ME</button>
+						<button id="btn-send">MESSAGE ME</button>
 					</form>
+					<div id="container"></div>
 				</div>
 			</section> <!-- contact -->
 		</main>
@@ -83,7 +87,7 @@
 				</div>
 		</footer>
 	</div> <!-- wrapper -->
-	<script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
-	<script type="text/javascript" src="../js/main.js"></script>
+	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
