--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
 		</footer>
 	</div> <!-- wrapper -->
 	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="javascript/main.js"></script>
 </body>
 </html>
