--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 					<div class="logo"><a href="#">EK</a></div>
 					<nav class="site-nav">
 						<ul class="group">
-							<li><a href="#">about</a></li>
-							<li><a href="#">work</a></li>
-							<li><a href="#">contact</a></li>
+							<li><a href="#about">about</a></li>
+							<li><a href="#i-can">work</a></li>
+							<li><a href="#contact">contact</a></li>
 						</ul>
 					</nav>
 				</div><!-- logo-nav -->
@@ -27,7 +27,7 @@
 			</div><!-- banner -->
 		</header>
 		<main id="main-block">
-			<section class="about group">	
+			<section id="about" class="about group">	
 				<div class="my-photo">
 					<img src="img/photo.jpg" alt="me">
 				</div>
@@ -36,7 +36,7 @@
 					<p>I'm 26 years old future web developer based in Dnipro, Ukraine. Currently I study web technologies at SoftServ IT Academy to become a front-end developer and web-designer. I have a great passion for web design and development. So I belive very soon I will be able to create good-looking high quality websites.</p>
 				</div>
 			</section> <!-- about -->
-			<section class="i-can">
+			<section  id="i-can" class="i-can">
 				<h2>How I can help</h2>
 				<section class="design group">
 					<div class="design-img">
@@ -57,7 +57,7 @@
 					</div>
 				</section><!-- develop section -->
 			</section> <!-- i-can -->
-			<section class="contact">
+			<section id="contact" class="contact">
 				<div class="contact-description">
 					<h2>Thank you for visiting my website!</h2>
 					<p>I’m open to new interesting projects so feel free to contact me.</p>
@@ -87,7 +87,6 @@
 				</div>
 		</footer>
 	</div> <!-- wrapper -->
-	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-	<script type="text/javascript" src="javascript/main.js"></script>
+	<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>	<script type="text/javascript" src="javascript/main.js"></script>
 </body>
 </html>
