--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 				</div>
 		</footer>
 	</div> <!-- wrapper -->
-	<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>	<script type="text/javascript" src="javascript/main.js"></script>
+	<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
+	<script type="text/javascript" src="javascript/main.js"></script>
 </body>
 </html>
