--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Kliuchyk</title>
 	<link href='https://fonts.googleapis.com/css?family=Lora:700,400,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
+	<link rel="icon" type="image/png" href="img/key.png">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
