--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Lora:700,400,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="img/key.png">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" href="css/animation.css" type="text/css" />
+	<link rel="stylesheet" href="css/header-block.css" type="text/css" />
+	<link rel="stylesheet" href="css/main-block.css" type="text/css" />
+	<link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
 	<div id="wrapper">
@@ -28,7 +31,7 @@
 			</div><!-- banner -->
 		</header>
 		<main id="main-block">
-			<section id="about" class="about group">	
+			<section id="about" class="group">	
 				<div class="my-photo">
 					<img src="img/photo.jpg" alt="me">
 				</div>
@@ -37,7 +40,7 @@
 					<p>I'm 26 years old future web developer based in Dnipro, Ukraine. Currently I study web technologies at SoftServ IT Academy to become a front-end developer and web-designer. I have a great passion for web design and development. So I belive very soon I will be able to create good-looking high quality websites.</p>
 				</div>
 			</section> <!-- about -->
-			<section  id="i-can" class="i-can">
+			<section  id="i-can">
 				<h2>How I can help</h2>
 				<section class="design group">
 					<div class="design-img">
@@ -58,7 +61,7 @@
 					</div>
 				</section><!-- develop section -->
 			</section> <!-- i-can -->
-			<section id="contact" class="contact">
+			<section id="contact">
 				<div class="contact-description">
 					<h2>Thank you for visiting my website!</h2>
 					<p>I’m open to new interesting projects so feel free to contact me.</p>
@@ -89,6 +92,6 @@
 		</footer>
 	</div> <!-- wrapper -->
 	<script   src="https://code.jquery.com/jquery-1.12.4.min.js"   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="   crossorigin="anonymous"></script>
-	<script type="text/javascript" src="javascript/main.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
