--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<h2>Thank you for visiting my website!</h2>
 					<p>I’m open to new interesting projects so feel free to contact me.</p>
 					<p>You are very welcom to ask any question or just to say hello!</p>
-					<form action="#" method="POST" class="feedback">
+					<form class="feedback">
 						<label for="email" class="hidden-label">Email</label>
 						<input id="email" type="email" placeholder="your@email.com">
 
