--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta  http-equiv="Content-Type" content="text/html"; charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Kliuchyk</title>
+	<title>Golden Key</title>
 	<link href='https://fonts.googleapis.com/css?family=Lora:700,400,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="img/key.png">
-	<link rel="stylesheet" href="css/animation.css" type="text/css" />
-	<link rel="stylesheet" href="css/header-block.css" type="text/css" />
-	<link rel="stylesheet" href="css/main-content.css" type="text/css" />
+	<link rel="stylesheet" href="css/animation.css" type="text/css">
+	<link rel="stylesheet" href="css/header-block.css" type="text/css">
+	<link rel="stylesheet" href="css/main-content.css" type="text/css">
 	<link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
@@ -17,14 +17,14 @@
 		<header id="header-block">
 			<div class="banner">
 				<div class="logo-nav">
-					<div class="logo">
+					<div class="logo animated bounceInDown">
 						<a href="#" id="logo">EK</a>
 					</div>
 					<nav class="site-nav">
 						<ul class="group">
-							<li><a href="#about">about</a></li>
-							<li><a href="#i-can">work</a></li>
-							<li><a href="#contact">contact</a></li>
+							<li><a href="#about" class="animated bounceInDown">about</a></li>
+							<li><a href="#i-can" class="animated bounceInDown">work</a></li>
+							<li><a href="#contact" class="animated bounceInDown">contact</a></li>
 						</ul>
 					</nav>
 				</div><!-- logo-nav -->
@@ -40,30 +40,30 @@
 		</header>
 		<main id="main-block">
 			<section id="about" class="group">	
-				<div class="my-photo">
+				<div class="my-photo animated left-move">
 					<img src="img/photo.jpg" alt="me">
 				</div>
-				<div class="hello-about">
+				<div class="hello-about animated right-move">
 					<h2>About Me</h2>
 					<p>I'm 26 years old future web developer based in Dnipro, Ukraine. Currently I study web technologies at SoftServ IT Academy to become a front-end developer and web-designer. I have a great passion for web design and development. So I belive very soon I will be able to create good-looking high quality websites.</p>
 				</div>
 			</section> <!-- about -->
 			<section  id="i-can">
-				<h2>How I can help</h2>
+				<h2 class="animated right-move">How I can help</h2>
 				<section class="design group">
-					<div class="design-img">
+					<div class="design-img animated left-move">
 						<img src="img/web-design.png" alt="design">
 					</div>
-					<div class="design-text">
+					<div class="design-text animated right-move">
 						<h3>Design your website.</h3>
 						<p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
 					</div>
 				</section><!-- design section -->
 				<section class="develop group">
-					<div class="develop-img">
+					<div class="develop-img animated right-move">
 						<img src="img/web-dev.png" alt="development">
 					</div>
-					<div class="develop-text">
+					<div class="develop-text animated left-move">
 						<h3>Develop what you need.</h3>
 						<p>I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
 					</div>
@@ -71,10 +71,10 @@
 			</section> <!-- i-can -->
 			<section id="contact">
 				<div class="contact-description">
-					<h2>Thank you for visiting my website!</h2>
-					<p>I’m open to new interesting projects so feel free to contact me.</p>
-					<p>You are very welcom to ask any question or just to say hello!</p>
-					<form class="feedback">
+					<h2 class="animated left-move">Thank you for visiting my website!</h2>
+					<p class="animated right-move">I’m open to new interesting projects so feel free to contact me.</p>
+					<p class="animated left-move">You are very welcom to ask any question or just to say hello!</p>
+					<form class="feedback animated right-move">
 						<label for="email" class="hidden-label">Email</label>
 						<input id="email" type="email" placeholder="your@email.com">
 
