--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<div id="container"></div>
 				</div>
 			</section> <!-- contact -->
-			<a href="#" class="back-to-top">Back to Top</a>
+			<a href="#" class="back-to-top">Go Up</a>
 		</main>
 		<footer id="bottom-block">
 				<p>&copy; 2016 Evgeny Kliuchyk</p>
