--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html"> 
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Golden Key</title>
+	<title>Kliuchyk Evgeny</title>
 	<link href='https://fonts.googleapis.com/css?family=Lora:700,400,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="img/key.png">
