--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
+	<meta http-equiv="Content-type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Kliuchyk Evgeny</title>
 	<link href='https://fonts.googleapis.com/css?family=Lora:700,400,700italic' rel='stylesheet' type='text/css'>
